feat: favourite pets feature